Nov 13, 2024  - **v4.1.6**
                Fix parameter mask help as described in https://github.com/scipion-em/scipion-em-cryosparc2/issues/170

Oct 10, 2024  - **v4.1.5**
                Compatibility with cryoSPARC v4.6

Aug 28, 2024  - **v4.1.4**
                Compatibility with cryoSPARC v4.5.3

May 19, 2024  - **v4.1.2**

                fixed: Installation Hot fix


May 17, 2024  - **v4.1.1**
                Compatibility with cryoSPARC v4.5.1
                Registering flex particles
                Integration with FlexUtils plugin


April 25, 2024 - **v4.1.0**
                 Tolerating deletion of projects within CS as well as their folders in the file system
                 Add new protocols:
                    * **3D Flex Data Prep**: Prepares particles for use in 3DFlex training and reconstruction. At the same  way,  Takes in a consensus (rigid) refinement density map, plus optionally a segmentation and generates a tetrahedral mesh for 3DFlex.
                    * **3D Flex Mesh Prep**: Takes in a consensus (rigid) refinement density map, plus optionally a segmentation and generates a tetrahedral mesh for 3DFlex. See Mesh Generation below.
                    * **3D Flex Training**: Uses a mesh and prepared particles (at a downsampled resolution) to train a 3DFlex model. Parameters control the number of latent dimensions, size of the model, and training hyperparameters. This job outputs checkpoints during training.
                    * **3D Flex Reconstruction**: Takes in a checkpoint from training as well as prepared high-resolution particles and performs high-resolution refinement using L-BFGS under the 3DFlex model. This is the stage at which improvements to density in high-res regions are computed. Outputs two half-maps that can be used for FSC validation, sharpening, and other downstream tasks.
                 Allowing Scipion to import coordinates


April 2, 2024  - **v4.0.11**