@@ -46,7 +46,7 @@ class TestFlex(BaseTest):
         cls.cryoSparcAvailable = True
         cls.sampling = 1.35
         cls.size = 128
-        cls.gpuList = '1'
+        cls.gpuList = '0'
 
         from pwem import Domain # import here to avoid ImportError
         try:
